--- a/public/main.css
+++ b/public/main.css
@@ -1,3 +1,8 @@
 body {
-    background-color: khaki;
+    background-color: paleturquoise;
+    text-align: center;
+}
+
+#playingField {
+    border: 1px solid black;
 }
